# EyerLib

./: .gitignore  README.md
Lib/: .gitignore  CMakeLists.txt
Lib/ColorSpaceAnimation/: CIE_RGB_COOR_EyerSpirit.cpp  CIE_RGB_COOR_EyerSpirit.hpp  CIE_XYZ_COOR_EyerSpirit.cpp  CIE_XYZ_COOR_EyerSpirit.hpp  CMakeLists.txt  Label_EyerSpirit.cpp  Label_EyerSpirit.hpp  MVPCoorLineSpirit.cpp  MVPCoorLineSpirit.hpp  MVPCustomSpirit.cpp  MVPCustomSpirit.hpp  MVPLineSpirit.cpp  MVPLineSpirit.hpp  MVPNormalizePlaneSpirit.cpp  MVPNormalizePlaneSpirit.hpp  MagicNumber.cpp  MagicNumber.hpp  Main.cpp  Scene.cpp  Scene.hpp  SphereSpirit.cpp  SphereSpirit.hpp  image_b.hpp  image_g.hpp  image_r.hpp
Lib/EyerAV/: AnnexB_to_avcC.cpp  AnnexB_to_avcC.hpp  CMakeLists.txt  EyerAV.hpp  EyerAVAV.hpp  EyerAVBitstreamFilter.cpp  EyerAVEncoder.cpp  EyerAVFrame.cpp  EyerAVFrame2.cpp  EyerAVFrameUtil.cpp  EyerAVPacket.cpp  EyerAVReadePngList.cpp  EyerAVReader.cpp  EyerAVStream.cpp  EyerAVTool.cpp  EyerAVWriter.cpp  EyerPureColorBlock.cpp  EyerPureColorBlock.hpp  EyerPureColorCheck.cpp  EyerPureColorCheck.h
Lib/EyerAVC/: AVCTable.cpp  AVCTable.hpp  CMakeLists.txt  EyerAVC.hpp  EyerAVCCommon.cpp  EyerAVCCommon.hpp  EyerAVCDecoder.cpp  EyerAVCDecoder.hpp  EyerAVC_VLC.cpp  EyerAVC_VLC.hpp  EyerAnnexB.cpp  EyerAnnexB.hpp  EyerBitStream.cpp  EyerBitStream.hpp  EyerCAVLC.cpp  EyerCAVLC.hpp  EyerCoeff4x4Block.cpp  EyerCoeff4x4Block.hpp  EyerENUMUtil.cpp  EyerEnum.cpp  EyerEnum.hpp  EyerField.cpp  EyerField.hpp  EyerIDR.cpp  EyerIDR.hpp  EyerMacroblock.cpp  EyerMacroblock.hpp  EyerNAL.cpp  EyerNAL.hpp  EyerNALU.cpp  EyerNALU.hpp  EyerNALUData.cpp  EyerNALUData.hpp  EyerNeighbourSamples.cpp  EyerNeighbourSamples.hpp  EyerPPS.cpp  EyerPPS.hpp  EyerSEI.cpp  EyerSLICE.cpp  EyerSLICE.hpp  (+34 more)
Lib/EyerAVCBlog/: AnnexBReader.cpp  AnnexBReader.hpp  BitStream.cpp  BitStream.hpp  CMakeLists.txt
Lib/EyerAVCBlogTest/: CMakeLists.txt  Main.cpp  demo_video_176x144.h264
Lib/EyerAVCTest/: Baseline.hpp  CMakeLists.txt  Main.cpp  NALUReader.hpp  a_1.h264  a_2.h264  a_3.h264
Lib/EyerAVC_/: EyerAVC_VLC.hpp  EyerBitStream.hpp  EyerField.hpp  EyerNAL.cpp  EyerNAL.hpp  EyerPPS.cpp  EyerPPS.hpp  EyerSEI.hpp  EyerSLICE.cpp  EyerSLICE.hpp  EyerSliceHeader.cpp
Lib/EyerAVTest/: AVGif.hpp  CMakeLists.txt  EyerAVDecoderTest.hpp  EyerAVPureColorCheck.hpp  EyerAVReadImage.h  EyerAVReadePngListTest.hpp  Test.cpp
Lib/EyerCAVLC/: CAVLC.cpp  CAVLC.hpp  CAVLC_.cpp  CMakeLists.txt  EyerCAVLC.hpp
Lib/EyerCAVLCTest/: CMakeLists.txt  Main.cpp
Lib/EyerCVTest/: CMakeLists.txt  Main.cpp
Lib/EyerCodecCommon/: CMakeLists.txt  EyerCodecCommon.hpp  EyerSyntax.cpp  EyerSyntax.hpp
Lib/EyerColorSpace/: CMakeLists.txt  EyerColorSpace.cpp  EyerColorSpace.hpp  EyerColorSpaceMat.cpp
Lib/EyerColorSpaceTest/: CMakeLists.txt  Main.cpp
Lib/EyerCore/: CMakeLists.txt  EyerBuffer.cpp  EyerBuffer.hpp  EyerBufferMut.cpp  EyerBufferMut.hpp  EyerCore.hpp  EyerLRUMap.hpp  EyerLog.cpp  EyerLog.hpp  EyerLogBean.cpp  EyerLogBean.hpp  EyerLogThread.cpp  EyerLogThread.hpp  EyerMD5.cpp  EyerMat4x1.cpp  EyerMath.hpp  EyerObserverQueue.hpp  EyerSockaddr.cpp  EyerSockaddr.hpp  EyerString.cpp  EyerString.hpp  EyerTable.hpp  EyerURLUtil.cpp  EyerUtil.cpp
Lib/EyerCoreTest/: CMakeLists.txt  MD5Test.hpp  Main.cpp  MathTest.hpp
Lib/EyerCppTest/: CMakeLists.txt  Main.cpp
Lib/EyerCrop/: EyerAVCropUtil.cpp
Lib/EyerDASH/: CMakeLists.txt  EyerAdaptationSet.cpp  EyerAdaptationSet.hpp  EyerDASH.hpp  EyerDASHReader.cpp  EyerDASHReader.hpp  EyerDASHReaderThread.cpp  EyerDASHReaderThread.hpp  EyerDASHStream.cpp  EyerDASHStream.hpp  EyerDASHStreamReaderThread.cpp  EyerDASHStreamReaderThread.hpp  EyerMPD.cpp  EyerMPD.hpp  EyerSegmentTemplate.cpp  EyerSegmentTemplate.hpp
Lib/EyerDashTest/: CMakeLists.txt  Main.cpp
Lib/EyerGB28181/: CMakeLists.txt  CallbackList.cpp  CallbackList.hpp  EyerGB28181.hpp  SIPCallback.cpp  SIPCallback.hpp  SIPDevice.cpp  SIPDevice.hpp  SIPEvent.hpp  SIPEventQueue.cpp  SIPEventQueue.hpp  SIPEventThread.cpp  SIPEventThread.hpp  SIPEventType.cpp  SIPEventType.hpp  SIPProcess.hpp  SIPProcessMessage.cpp  SIPProcessMessage.hpp  SIPProcessRegister.cpp  SIPProcessRegister.hpp  SIPServer.cpp  SIPServer.hpp  SIPServerContext.hpp  SIPServerMainThread.cpp  SIPServerMainThread.hpp
Lib/EyerGB28181Test/: CMakeLists.txt  Main.cpp
Lib/EyerGL/: CMakeLists.txt  EyerGL.hpp  EyerGLDraw.cpp  EyerGLProgram.cpp  EyerGLVAO.cpp
Lib/EyerGLAD/: CMakeLists.txt
Lib/EyerGLContext/: CMakeLists.txt  EyerGLContext.hpp  EyerGLContextThread.cpp  EyerGLContextThread_Windows.cpp
Lib/EyerGLCustomComponent/: CMakeLists.txt  EyerGLCustomComponent.hpp  EyerGLFrameDraw.cpp  EyerGLJulia.cpp  EyerGLMVPTextureDraw.cpp  EyerGLSingleTextureDraw.cpp  EyerGLTest.cpp  EyerGLTextDraw.cpp  EyerGLYUV2TextureComponent.cpp  MVPCoor.cpp  MVPCoor.hpp  MVPCoorLine.cpp  MVPCoorLine.hpp  MVPCube.cpp  MVPCube.hpp  MVPCustomG.cpp  MVPCustomG.hpp  MVPImagePlane.cpp  MVPImagePlane.hpp  MVPLine.cpp  MVPLine.hpp  MVPNormalizePlane.cpp  MVPNormalizePlane.hpp  MVPSphere.cpp  MVPSphere.hpp
Lib/EyerGLRenderTask/: CMakeLists.txt  EyerGLRenderTask.hpp
Lib/EyerGLShader/: Shader.cpp  Shader.hpp
Lib/EyerGLTest/: CMakeLists.txt  Main.cpp
Lib/EyerGLWindow/: EyerGLWindow.cpp
Lib/EyerGPUDomino/: CMakeLists.txt  EyerCommonComponent.cpp  EyerGPUDomino.hpp  EyerGomino.cpp  EyerGominoSoulout.cpp  EyerSplitScreen2.cpp
Lib/EyerGPUDominoTest/: CMakeLists.txt  Main.cpp
Lib/EyerHttp/: CMakeLists.txt  EyerHttp.cpp  EyerHttp.hpp  EyerSimplestHttp.cpp
Lib/EyerHttpTest/: CMakeLists.txt  Main.cpp
Lib/EyerImage/: CMakeLists.txt  EyerImage.hpp  EyerImageBuffer.cpp  EyerImageBuffer.hpp  EyerImageReader.cpp  EyerImageReader.hpp
Lib/EyerImgTest/: Main.cpp
Lib/EyerLua/: A.cpp  A.hpp  CMakeLists.txt  EyerLua.hpp
Lib/EyerLuaTest/: CMakeLists.txt  Main.cpp
Lib/EyerMP4/: BoxFTYP.cpp  BoxFTYP.hpp  BoxType.cpp  BoxType.hpp  CMakeLists.txt  EyerISOTypeReader.cpp  EyerISOTypeReader.hpp  EyerMP4.hpp  EyerMP4Box.cpp  EyerMP4Box.hpp  EyerMP4Box_ftyp.cpp  EyerMP4Box_ftyp.hpp  EyerMP4Box_hdlr.hpp  MP4Box.cpp  (+51 more)
MBLib/: CMakeLists.txt
(+291 files in other folders)
